# TongSampahBinLaden

./: .gitignore  ARCHITECTURE.md  ESP32_MQTT_CONFIG.md  README.md  trash.ino
server/: .env.example  Dockerfile  README.md  compose.yml  pyproject.toml
server/server/src/models/saved_models/: time_prediction_model.joblib
server/src/: crypto.py  main.py  services.py  storage.py  utils.py
server/src/models/: fuzzy_model.py  regression_model.joblib  regression_model.py  regression_model_untrained.py  time_prediction_model.py
server/src/static/: crypto.js  style.css
server/src/templates/: dashboard.html  history.html
