[project]
name = "trash"
version = "0.1.0"
description = "ESP32 IoT Server with Dashboard"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask>=3.0.0",
    "flask-cors>=4.0.0",
    "plotly>=5.17.0",
    "pandas>=2.0.0",
    "python-dateutil>=2.8.0",
    "esptool>=5.1.0",
    "requests>=2.32.5",
]
